Реализация поддержки работы в старых версиях, в том числе 8.3.6

--- a/ColorSchemesInstaller/Templates/Designer_HTML/Ext/Template/ru.html
+++ b/ColorSchemesInstaller/Templates/Designer_HTML/Ext/Template/ru.html
@@ -30,20 +30,20 @@ div {font-size: 12pt; font-family: Consolas, Courier New}
 <div><span class="Comments">//На двух строках</span></div>
 <div><span class="Preprocessor">&amp;НаКлиенте</span></div>
 <div><span class="Keywords">Процедура</span> <span class="Identifiers">СделатьХорошо</span><span class="Operators">(</span><span class="Identifiers SearchResult">Массив</span><span class="Operators">)</span> <span class="Keywords">Экспорт</span> <span class="Comments">//Результаты поиска</span></div>
-<div><span class="Apple-tab-span" style="white-space: pre;">    </span></div>
-<div><span class="Apple-tab-span" style="white-space: pre;">    </span><span class="Identifiers CurrentToken">ОтветНаГлавныйВопрос</span> <span class="Operators">=</span> <span class="Numerics">42</span><span class="Operators">;</span> <span class="Comments">//Текущий идентификатор</span></div>
-<div><span class="Apple-tab-span" style="white-space: pre;">    </span><span class="Identifiers">ПростоСтрока</span> <span class="Operators">=</span> <span class="Strings">"Просто строка"</span><span class="Operators">;</span></div>
-<div><span class="Apple-tab-span" style="white-space: pre;">    </span><span class="Identifiers">ДеньПрограммиста</span> <span class="Operators">=</span> <span class="Dates">'20200912'</span><span class="Operators">;</span></div>
-<div><span class="Apple-tab-span" style="white-space: pre;">    </span></div>
-<div><span class="Apple-tab-span" style="white-space: pre;">    </span><span class="Keywords">Для</span> <span class="Identifiers CurrentSelection">Индекс</span> <span class="Operators">=</span> <span class="Numerics">0</span> <span class="Keywords">По</span> <span class="Numerics">1023</span> <span class="Keywords">Цикл</span> <span class="Comments">//Выбранный идентификатор</span></div>
-<div><span class="Apple-tab-span" style="white-space: pre;">        </span><span class="Identifiers">ТекущийОбъект</span> <span class="Operators">=</span> <span class="Identifiers SearchResult">Массив</span><span class="Operators">[</span><span class="Identifiers CurrentSelection">Индекс</span><span class="Operators">];</span></div>
-<div><span class="Apple-tab-span" style="white-space: pre;">        </span><span class="Keywords PairLexeme">Если</span> <span class="Identifiers">ЗначениеЗаполнено</span><span class="Operators">(</span><span class="Identifiers">ТекущийОбъект</span><span class="Operators">)</span> <span class="Keywords">Тогда</span> <span class="Comments">//Границы блока</span></div>
-<div><span class="Apple-tab-span" style="white-space: pre;">            </span><span class="Identifiers">ТекущийОбъект</span><span class="Operators">.</span><span class="Identifiers">ДелаемХорошо</span><span class="Operators">();</span></div>
-<div><span class="Apple-tab-span" style="white-space: pre;">        </span><span class="Keywords PairLexeme">Иначе</span></div>
-<div><span class="Apple-tab-span" style="white-space: pre;">            </span><span class="Identifiers">Сообщить</span><span class="Operators">(</span><span class="Strings">"Не заполнен элемент # "</span><span class="Operators"> + </span><span class="Identifiers CurrentSelection">Индекс</span><span class="Operators">);</span></div>
-<div><span class="Apple-tab-span" style="white-space: pre;">        </span><span class="Keywords PairLexeme">КонецЕсли</span><span class="Operators">;</span></div>
-<div><span class="Apple-tab-span" style="white-space: pre;">    </span><span class="Keywords">КонецЦикла</span><span class="Operators">;</span></div>
-<div><span class="Apple-tab-span" style="white-space: pre;">    </span></div>
+<div>    </div>
+<div>    <span class="Identifiers CurrentToken">ОтветНаГлавныйВопрос</span> <span class="Operators">=</span> <span class="Numerics">42</span><span class="Operators">;</span> <span class="Comments">//Текущий идентификатор</span></div>
+<div>    <span class="Identifiers">ПростоСтрока</span> <span class="Operators">=</span> <span class="Strings">"Просто строка"</span><span class="Operators">;</span></div>
+<div>    <span class="Identifiers">ДеньПрограммиста</span> <span class="Operators">=</span> <span class="Dates">'20200912'</span><span class="Operators">;</span></div>
+<div>    </div>
+<div>    <span class="Keywords">Для</span> <span class="Identifiers CurrentSelection">Индекс</span> <span class="Operators">=</span> <span class="Numerics">0</span> <span class="Keywords">По</span> <span class="Numerics">1023</span> <span class="Keywords">Цикл</span> <span class="Comments">//Выбранный идентификатор</span></div>
+<div>        <span class="Identifiers">ТекущийОбъект</span> <span class="Operators">=</span> <span class="Identifiers SearchResult">Массив</span><span class="Operators">[</span><span class="Identifiers CurrentSelection">Индекс</span><span class="Operators">];</span></div>
+<div>        <span class="Keywords PairLexeme">Если</span> <span class="Identifiers">ЗначениеЗаполнено</span><span class="Operators">(</span><span class="Identifiers">ТекущийОбъект</span><span class="Operators">)</span> <span class="Keywords">Тогда</span> <span class="Comments">//Границы блока</span></div>
+<div>            <span class="Identifiers">ТекущийОбъект</span><span class="Operators">.</span><span class="Identifiers">ДелаемХорошо</span><span class="Operators">();</span></div>
+<div>        <span class="Keywords PairLexeme">Иначе</span></div>
+<div>            <span class="Identifiers">Сообщить</span><span class="Operators">(</span><span class="Strings">"Не заполнен элемент # "</span><span class="Operators"> + </span><span class="Identifiers CurrentSelection">Индекс</span><span class="Operators">);</span></div>
+<div>        <span class="Keywords PairLexeme">КонецЕсли</span><span class="Operators">;</span></div>
+<div>    <span class="Keywords">КонецЦикла</span><span class="Operators">;</span></div>
+<div>    </div>
 <div><span class="Keywords">КонецПроцедуры</span></div>
 <div><br></div>
 <div><span class="Preprocessor">#КонецОбласти</span></div>
@@ -56,20 +56,20 @@ div {font-size: 12pt; font-family: Consolas, Courier New}
 <div><span class="Comments">//On two lines</span></div>
 <div><span class="Preprocessor">&amp;atClient</span></div>
 <div><span class="Keywords">procedure</span> <span class="Identifiers">makeGreat</span><span class="Operators">(</span><span class="Identifiers SearchResult">array</span><span class="Operators">)</span> <span class="Keywords">export</span> <span class="Comments">//Search result</span></div>
-<div><span class="Apple-tab-span" style="white-space: pre;">    </span></div>
-<div><span class="Apple-tab-span" style="white-space: pre;">    </span><span class="Identifiers CurrentToken">ultimateAnswer</span> <span class="Operators">=</span> <span class="Numerics">42</span><span class="Operators">;</span> <span class="Comments">//Current token</span></div>
-<div><span class="Apple-tab-span" style="white-space: pre;">    </span><span class="Identifiers">simpleString</span> <span class="Operators">=</span> <span class="Strings">"Simple string"</span><span class="Operators">;</span></div>
-<div><span class="Apple-tab-span" style="white-space: pre;">    </span><span class="Identifiers">programmersDay</span> <span class="Operators">=</span> <span class="Dates">'20200912'</span><span class="Operators">;</span></div>
-<div><span class="Apple-tab-span" style="white-space: pre;">    </span></div>
-<div><span class="Apple-tab-span" style="white-space: pre;">    </span><span class="Keywords">for</span> <span class="Identifiers CurrentSelection">index</span> <span class="Operators">=</span> <span class="Numerics">0</span> <span class="Keywords">to</span> <span class="Numerics">1023</span> <span class="Keywords">do</span> <span class="Comments">//Current selection</span></div>
-<div><span class="Apple-tab-span" style="white-space: pre;">        </span><span class="Identifiers">currentObject</span> <span class="Operators">=</span> <span class="Identifiers SearchResult">array</span><span class="Operators">[</span><span class="Identifiers CurrentSelection">index</span><span class="Operators">];</span></div>
-<div><span class="Apple-tab-span" style="white-space: pre;">        </span><span class="Keywords PairLexeme">if</span> <span class="Identifiers">valueIsFilled</span><span class="Operators">(</span><span class="Identifiers">currentObject</span><span class="Operators">)</span> <span class="Keywords">then</span> <span class="Comments">//Pair lexeme</span></div>
-<div><span class="Apple-tab-span" style="white-space: pre;">            </span><span class="Identifiers">currentObject</span><span class="Operators">.</span><span class="Identifiers">makingGreat</span><span class="Operators">();</span></div>
-<div><span class="Apple-tab-span" style="white-space: pre;">        </span><span class="Keywords PairLexeme">else</span></div>
-<div><span class="Apple-tab-span" style="white-space: pre;">            </span><span class="Identifiers">message</span><span class="Operators">(</span><span class="Strings">"Empty entry # "</span><span class="Operators"> + </span><span class="Identifiers CurrentSelection">index</span><span class="Operators">);</span></div>
-<div><span class="Apple-tab-span" style="white-space: pre;">        </span><span class="Keywords PairLexeme">endif</span><span class="Operators">;</span></div>
-<div><span class="Apple-tab-span" style="white-space: pre;">    </span><span class="Keywords">enddo</span><span class="Operators">;</span></div>
-<div><span class="Apple-tab-span" style="white-space: pre;">    </span></div>
+<div>    </div>
+<div>    <span class="Identifiers CurrentToken">ultimateAnswer</span> <span class="Operators">=</span> <span class="Numerics">42</span><span class="Operators">;</span> <span class="Comments">//Current token</span></div>
+<div>    <span class="Identifiers">simpleString</span> <span class="Operators">=</span> <span class="Strings">"Simple string"</span><span class="Operators">;</span></div>
+<div>    <span class="Identifiers">programmersDay</span> <span class="Operators">=</span> <span class="Dates">'20200912'</span><span class="Operators">;</span></div>
+<div>    </div>
+<div>    <span class="Keywords">for</span> <span class="Identifiers CurrentSelection">index</span> <span class="Operators">=</span> <span class="Numerics">0</span> <span class="Keywords">to</span> <span class="Numerics">1023</span> <span class="Keywords">do</span> <span class="Comments">//Current selection</span></div>
+<div>        <span class="Identifiers">currentObject</span> <span class="Operators">=</span> <span class="Identifiers SearchResult">array</span><span class="Operators">[</span><span class="Identifiers CurrentSelection">index</span><span class="Operators">];</span></div>
+<div>        <span class="Keywords PairLexeme">if</span> <span class="Identifiers">valueIsFilled</span><span class="Operators">(</span><span class="Identifiers">currentObject</span><span class="Operators">)</span> <span class="Keywords">then</span> <span class="Comments">//Pair lexeme</span></div>
+<div>            <span class="Identifiers">currentObject</span><span class="Operators">.</span><span class="Identifiers">makingGreat</span><span class="Operators">();</span></div>
+<div>        <span class="Keywords PairLexeme">else</span></div>
+<div>            <span class="Identifiers">message</span><span class="Operators">(</span><span class="Strings">"Empty entry # "</span><span class="Operators"> + </span><span class="Identifiers CurrentSelection">index</span><span class="Operators">);</span></div>
+<div>        <span class="Keywords PairLexeme">endif</span><span class="Operators">;</span></div>
+<div>    <span class="Keywords">enddo</span><span class="Operators">;</span></div>
+<div>    </div>
 <div><span class="Keywords">endprocedure</span></div>
 <div><br></div>
 <div><span class="Preprocessor">#endregion</span></div>
