Исправление раскраски номеров строк в EDT.

--- a/ColorSchemesInstaller/Templates/EDT_HTML/Ext/Template/ru.html
+++ b/ColorSchemesInstaller/Templates/EDT_HTML/Ext/Template/ru.html
@@ -32,55 +32,55 @@ span::selection {
    }
 </style></head><body class="Background">
 <div class="blockrus">
-<div> 1 <span class="Preprocessor">#Область</span> <span class="Others">ПрограммныйИнтерфейс</span></div>
-<div> 2 </div>
-<div> 3 <span class="Comment">//Это комментарий к процедуре на двух строках</span></div>
-<div> 4 <span class="Comment">//Чтобы посмотреть цвет выделения, выделите текст</span></div>
-<div> 5 <span class="BSL_Pragmas">&amp;НаКлиенте</span></div>
-<div> 6 <span class="BSL_Keywords">Процедура</span> <span class="Others">СделатьХорошо</span><span class="Brackets">(</span><span class="Others">Массив</span><span class="Brackets">)</span> <span class="BSL_Keywords">Экспорт</span></div>
-<div> 7     </div>
-<div class="currentLineColor"> 8     <span class="Others">ОтветНаГлавныйВопрос</span> <span class="Operators">=</span> <span class="Numbers">42</span><span class="Others">;</span> <span class="Comment">//Текущая строка</span></div>
-<div> 9     <span class="Others">ПростоСтрока</span> <span class="Operators">=</span> <span class="Strings">"Просто строка"</span><span class="Others">;</span></div>
-<div>10     <span class="Others">ДеньПрограммиста</span> <span class="Operators">=</span> <span class="Others">'20200912'</span><span class="Others">;</span></div>
-<div>11     </div>
-<div>12     <span class="BSL_Keywords">Для</span> <span class="Others occurrenceIndicationColor">Индекс</span> <span class="Operators">=</span> <span class="Numbers">0</span> <span class="BSL_Keywords">По</span> <span class="Numbers">1023</span> <span class="BSL_Keywords">Цикл</span> <span class="Comment">//Выбранный идентификатор</span></div>
-<div>13         <span class="Others">ТекущийОбъект</span> <span class="Operators">=</span> <span class="Others">Массив</span><span class="Brackets">[</span><span class="Others occurrenceIndicationColor">Индекс</span><span class="Brackets">]</span><span class="Others">;</span></div>
-<div>14         <span class="BSL_Keywords">Если</span> <span class="Builtinfunction">ЗначениеЗаполнено</span><span class="Brackets">(</span><span class="Others">ТекущийОбъект</span><span class="Brackets">)</span> <span class="BSL_Keywords">Тогда</span></div>
-<div>15             <span class="Others">ТекущийОбъект</span><span class="Operators">.</span><span class="Others">ДелаемХорошо</span><span class="Brackets">()</span><span class="Others">;</span></div>
-<div>16         <span class="BSL_Keywords">Иначе</span></div>
-<div>17             <span class="Builtinfunction">Сообщить</span><span class="Brackets">(</span><span class="Strings">"Не заполнен элемент # "</span><span class="Operators"> + </span><span class="Others occurrenceIndicationColor">Индекс</span><span class="Brackets">)</span><span class="Others">;</span></div>
-<div>18         <span class="BSL_Keywords">КонецЕсли</span><span class="Others">;</span></div>
-<div>19     <span class="BSL_Keywords">КонецЦикла</span><span class="Others">;</span></div>
-<div>20     </div>
-<div>21 <span class="BSL_Keywords">КонецПроцедуры</span></div>
-<div>22 </div>
-<div>23 <span class="Preprocessor">#КонецОбласти</span></div>
+<div><span class="lineNumberColor"> 1</span> <span class="Preprocessor">#Область</span> <span class="Others">ПрограммныйИнтерфейс</span></div>
+<div><span class="lineNumberColor"> 2</span> </div>
+<div><span class="lineNumberColor"> 3</span> <span class="Comment">//Это комментарий к процедуре на двух строках</span></div>
+<div><span class="lineNumberColor"> 4</span> <span class="Comment">//Чтобы посмотреть цвет выделения, выделите текст</span></div>
+<div><span class="lineNumberColor"> 5</span> <span class="BSL_Pragmas">&amp;НаКлиенте</span></div>
+<div><span class="lineNumberColor"> 6</span> <span class="BSL_Keywords">Процедура</span> <span class="Others">СделатьХорошо</span><span class="Brackets">(</span><span class="Others">Массив</span><span class="Brackets">)</span> <span class="BSL_Keywords">Экспорт</span></div>
+<div><span class="lineNumberColor"> 7</span>     </div>
+<div class="currentLineColor"><span class="lineNumberColor"> 8</span>     <span class="Others">ОтветНаГлавныйВопрос</span> <span class="Operators">=</span> <span class="Numbers">42</span><span class="Others">;</span> <span class="Comment">//Текущая строка</span></div>
+<div><span class="lineNumberColor"> 9</span>     <span class="Others">ПростоСтрока</span> <span class="Operators">=</span> <span class="Strings">"Просто строка"</span><span class="Others">;</span></div>
+<div><span class="lineNumberColor">10</span>     <span class="Others">ДеньПрограммиста</span> <span class="Operators">=</span> <span class="Others">'20200912'</span><span class="Others">;</span></div>
+<div><span class="lineNumberColor">11</span>     </div>
+<div><span class="lineNumberColor">12</span>     <span class="BSL_Keywords">Для</span> <span class="Others occurrenceIndicationColor">Индекс</span> <span class="Operators">=</span> <span class="Numbers">0</span> <span class="BSL_Keywords">По</span> <span class="Numbers">1023</span> <span class="BSL_Keywords">Цикл</span> <span class="Comment">//Выбранный идентификатор</span></div>
+<div><span class="lineNumberColor">13</span>         <span class="Others">ТекущийОбъект</span> <span class="Operators">=</span> <span class="Others">Массив</span><span class="Brackets">[</span><span class="Others occurrenceIndicationColor">Индекс</span><span class="Brackets">]</span><span class="Others">;</span></div>
+<div><span class="lineNumberColor">14</span>         <span class="BSL_Keywords">Если</span> <span class="Builtinfunction">ЗначениеЗаполнено</span><span class="Brackets">(</span><span class="Others">ТекущийОбъект</span><span class="Brackets">)</span> <span class="BSL_Keywords">Тогда</span></div>
+<div><span class="lineNumberColor">15</span>             <span class="Others">ТекущийОбъект</span><span class="Operators">.</span><span class="Others">ДелаемХорошо</span><span class="Brackets">()</span><span class="Others">;</span></div>
+<div><span class="lineNumberColor">16</span>         <span class="BSL_Keywords">Иначе</span></div>
+<div><span class="lineNumberColor">17</span>             <span class="Builtinfunction">Сообщить</span><span class="Brackets">(</span><span class="Strings">"Не заполнен элемент # "</span><span class="Operators"> + </span><span class="Others occurrenceIndicationColor">Индекс</span><span class="Brackets">)</span><span class="Others">;</span></div>
+<div><span class="lineNumberColor">18</span>         <span class="BSL_Keywords">КонецЕсли</span><span class="Others">;</span></div>
+<div><span class="lineNumberColor">19</span>     <span class="BSL_Keywords">КонецЦикла</span><span class="Others">;</span></div>
+<div><span class="lineNumberColor">20</span>     </div>
+<div><span class="lineNumberColor">21</span> <span class="BSL_Keywords">КонецПроцедуры</span></div>
+<div><span class="lineNumberColor">22</span> </div>
+<div><span class="lineNumberColor">23</span> <span class="Preprocessor">#КонецОбласти</span></div>
 <div><br></div>
 </div>
 <div class="blockeng">
-<div> 1 <span class="Preprocessor">#region</span> <span class="Others">public</span></div>
-<div> 2 </div>
-<div> 3 <span class="Comment">//This is comment to procedure on two lines</span></div>
-<div> 4 <span class="Comment">//To see the selection colors, select the text</span></div>
-<div> 5 <span class="BSL_Pragmas">&amp;atClient</span></div>
-<div> 6 <span class="BSL_Keywords">procedure</span> <span class="Others">makeGreat</span><span class="Brackets">(</span><span class="Others">array</span><span class="Brackets">)</span> <span class="BSL_Keywords">export</span></div>
-<div> 7     </div>
-<div class="currentLineColor"> 8     <span class="Others">ultimateAnswer</span> <span class="Operators">=</span> <span class="Numbers">42</span><span class="Others">;</span> <span class="Comment">//Current line</span></div>
-<div> 9     <span class="Others">simpleString</span> <span class="Operators">=</span> <span class="Strings">"Simple string"</span><span class="Others">;</span></div>
-<div>10     <span class="Others">programmersDay</span> <span class="Operators">=</span> <span class="Others">'20200912'</span><span class="Others">;</span></div>
-<div>11     </div>
-<div>12     <span class="BSL_Keywords">for</span> <span class="Others occurrenceIndicationColor">index</span> <span class="Operators">=</span> <span class="Numbers">0</span> <span class="BSL_Keywords">to</span> <span class="Numbers">1023</span> <span class="BSL_Keywords">do</span> <span class="Comment">//Current selection</span></div>
-<div>13         <span class="Others">currentObject</span> <span class="Operators">=</span> <span class="Others">array</span><span class="Brackets">[</span><span class="Others occurrenceIndicationColor">index</span><span class="Brackets">]</span><span class="Others">;</span></div>
-<div>14         <span class="BSL_Keywords">if</span> <span class="Builtinfunction">valueIsFilled</span><span class="Brackets">(</span><span class="Others">currentObject</span><span class="Brackets">)</span> <span class="BSL_Keywords">then</span> <span class="Comment"></span></div>
-<div>15             <span class="Others">currentObject</span><span class="Operators">.</span><span class="Others">makingGreat</span><span class="Brackets">()</span><span class="Others">;</span></div>
-<div>16         <span class="BSL_Keywords">else</span></div>
-<div>17             <span class="Builtinfunction">message</span><span class="Brackets">(</span><span class="Strings">"Empty entry # "</span><span class="Operators"> + </span><span class="Others occurrenceIndicationColor">index</span><span class="Brackets">)</span><span class="Others">;</span></div>
-<div>18         <span class="BSL_Keywords">endif</span><span class="Others">;</span></div>
-<div>19     <span class="BSL_Keywords">enddo</span><span class="Others">;</span></div>
-<div>20     </div>
-<div>21 <span class="BSL_Keywords">endprocedure</span></div>
-<div>22 </div>
-<div>23 <span class="Preprocessor">#endregion</span></div>
+<div><span class="lineNumberColor"> 1</span> <span class="Preprocessor">#region</span> <span class="Others">public</span></div>
+<div><span class="lineNumberColor"> 2</span> </div>
+<div><span class="lineNumberColor"> 3</span> <span class="Comment">//This is comment to procedure on two lines</span></div>
+<div><span class="lineNumberColor"> 4</span> <span class="Comment">//To see the selection colors, select the text</span></div>
+<div><span class="lineNumberColor"> 5</span> <span class="BSL_Pragmas">&amp;atClient</span></div>
+<div><span class="lineNumberColor"> 6</span> <span class="BSL_Keywords">procedure</span> <span class="Others">makeGreat</span><span class="Brackets">(</span><span class="Others">array</span><span class="Brackets">)</span> <span class="BSL_Keywords">export</span></div>
+<div><span class="lineNumberColor"> 7</span>     </div>
+<div class="currentLineColor"><span class="lineNumberColor"> 8</span>     <span class="Others">ultimateAnswer</span> <span class="Operators">=</span> <span class="Numbers">42</span><span class="Others">;</span> <span class="Comment">//Current line</span></div>
+<div><span class="lineNumberColor"> 9</span>     <span class="Others">simpleString</span> <span class="Operators">=</span> <span class="Strings">"Simple string"</span><span class="Others">;</span></div>
+<div><span class="lineNumberColor">10</span>     <span class="Others">programmersDay</span> <span class="Operators">=</span> <span class="Others">'20200912'</span><span class="Others">;</span></div>
+<div><span class="lineNumberColor">11</span>     </div>
+<div><span class="lineNumberColor">12</span>     <span class="BSL_Keywords">for</span> <span class="Others occurrenceIndicationColor">index</span> <span class="Operators">=</span> <span class="Numbers">0</span> <span class="BSL_Keywords">to</span> <span class="Numbers">1023</span> <span class="BSL_Keywords">do</span> <span class="Comment">//Current selection</span></div>
+<div><span class="lineNumberColor">13</span>         <span class="Others">currentObject</span> <span class="Operators">=</span> <span class="Others">array</span><span class="Brackets">[</span><span class="Others occurrenceIndicationColor">index</span><span class="Brackets">]</span><span class="Others">;</span></div>
+<div><span class="lineNumberColor">14</span>         <span class="BSL_Keywords">if</span> <span class="Builtinfunction">valueIsFilled</span><span class="Brackets">(</span><span class="Others">currentObject</span><span class="Brackets">)</span> <span class="BSL_Keywords">then</span> <span class="Comment"></span></div>
+<div><span class="lineNumberColor">15</span>             <span class="Others">currentObject</span><span class="Operators">.</span><span class="Others">makingGreat</span><span class="Brackets">()</span><span class="Others">;</span></div>
+<div><span class="lineNumberColor">16</span>         <span class="BSL_Keywords">else</span></div>
+<div><span class="lineNumberColor">17</span>             <span class="Builtinfunction">message</span><span class="Brackets">(</span><span class="Strings">"Empty entry # "</span><span class="Operators"> + </span><span class="Others occurrenceIndicationColor">index</span><span class="Brackets">)</span><span class="Others">;</span></div>
+<div><span class="lineNumberColor">18</span>         <span class="BSL_Keywords">endif</span><span class="Others">;</span></div>
+<div><span class="lineNumberColor">19</span>     <span class="BSL_Keywords">enddo</span><span class="Others">;</span></div>
+<div><span class="lineNumberColor">20</span>     </div>
+<div><span class="lineNumberColor">21</span> <span class="BSL_Keywords">endprocedure</span></div>
+<div><span class="lineNumberColor">22</span> </div>
+<div><span class="lineNumberColor">23</span> <span class="Preprocessor">#endregion</span></div>
 <div><br></div>
 </div>
 </body></html>
